<?xml version="1.0"?>
<package format="3">
  <name>vision_data_collector</name>
  <version>0.1.0</version>
  <description>YOLO training data collector for TurtleBot4 + OAK-D</description>
  <maintainer email="domcove9@gmail.com">ahn</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>nav2_msgs</depend>
  <depend>action_msgs</depend>
  <depend>cv_bridge</depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <depend>tf_transformations</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>python3-pyqt5</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_plugin</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
    <rqt_gui>
      <group>
        <label>Vision</label>
        <plugin path="rqt_plugin" filename="plugin.xml"/>
      </group>
    </rqt_gui>
  </export>
</package>
