<?xml version="1.0"?>
<package format="3">
  <name>vision_data_collector</name>
  <version>0.1.0</version>
  <description>YOLO training data collector for TurtleBot4 + OAK-D</description>
  <maintainer email="domcove9@gmail.com">ahn</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>vision_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>action_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf_transformations</depend>

  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pyqt5</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>

  <export>
    <build_type>ament_python</build_type>
    <rqt_gui>
      <group>
        <label>Vision</label>
        <plugin path="rqt_plugin" filename="plugin.xml"/>
      </group>
    </rqt_gui>
  </export>
</package>
